policies/templates/k8srequireteamlabel-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequireteamlabel
spec:
  crd:
    spec:
      names:
        kind: K8sRequireTeamLabel
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequireteamlabel

        violation[{"msg": msg}] {
          not input.review.object.metadata.labels["team"]
          msg := "🚫 Missing required label: 'team'"
        }
